# python_3_rest_api

./: .env  .gitignore  .pre-commit-config.yaml  README.md  database.ddl  events.db  pyproject.toml  runserver.py
globoticket/: __init__.py  api.py  crud.py  database.py  frontmatter.py  models.py  schemas.py
product_info/classical/: 982359.yml
product_info/jazz/: 23498736.yml
product_info/rock/: 23534643.yml
static/: catalog.html  details.html  index.html
static/css/: main.css
tests/: conftest.py  test_find_frontmatter_files.py  test_get_event.py  test_parse_frontmatter.py
tests/product_info/hiphop/: 123456.yml
